; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/l2cap/extr_l2c_utils.c_l2c_is_cmd_rejected.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/l2cap/extr_l2c_utils.c_l2c_is_cmd_rejected.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@L2CAP_CMD_REJ_MTU_EXCEEDED = common dso_local global i32 0, align 4
@L2CAP_DEFAULT_MTU = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"Dumping first Command (%d)\00", align 1
@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @l2c_is_cmd_rejected(i32 %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %8 = load i32, i32* %5, align 4
  switch i32 %8, label %18 [
    i32 131, label %9
    i32 132, label %9
    i32 130, label %9
    i32 129, label %9
    i32 128, label %9
    i32 135, label %9
    i32 134, label %9
    i32 133, label %9
  ]

9:                                                ; preds = %3, %3, %3, %3, %3, %3, %3, %3
  %10 = load i32*, i32** %7, align 8
  %11 = load i32, i32* @L2CAP_CMD_REJ_MTU_EXCEEDED, align 4
  %12 = load i32, i32* %6, align 4
  %13 = load i32, i32* @L2CAP_DEFAULT_MTU, align 4
  %14 = call i32 @l2cu_send_peer_cmd_reject(i32* %10, i32 %11, i32 %12, i32 %13, i32 0)
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @L2CAP_TRACE_WARNING(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i32 %15)
  %17 = load i32, i32* @TRUE, align 4
  store i32 %17, i32* %4, align 4
  br label %20

18:                                               ; preds = %3
  %19 = load i32, i32* @FALSE, align 4
  store i32 %19, i32* %4, align 4
  br label %20

20:                                               ; preds = %18, %9
  %21 = load i32, i32* %4, align 4
  ret i32 %21
}

declare dso_local i32 @l2cu_send_peer_cmd_reject(i32*, i32, i32, i32, i32) #1

declare dso_local i32 @L2CAP_TRACE_WARNING(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
